2008-11-13  Neil Roberts  <neil@linux.intel.com>

	* clutter/cogl/gles/cogl-gles2-wrapper.h:
	* clutter/cogl/gles/cogl-gles2-wrapper.c:
	Initialise the 'tex' sampler uniform to 0. The GLSL spec
	specifically says that you must initialize sampler uniforms. This
	fixes texturing for GLES 2 when using the PowerVR simulator via
	software Mesa.

2008-11-13  Robert Bragg  <robert@linux.intel.com>

	Gets the mesh API working with GLES2

	* clutter/cogl/common/cogl-mesh.c:
	Make sure we use the appropriate cogl_wrap_gl* funcs as appropriate

	* clutter/cogl/gles/cogl-gles2-wrapper.c
	* clutter/cogl/gles/cogl-gles2-wrapper.h:
	In our glColorPointer wrapper we needed to mark our color attribute
	as normalized.

	* tests/conform/Makefile.am:
	When creating unit test symlinks we use the -l gtester option to
	list tests, but when using the PVR SDK the test binary also spews
	out some extra info that caused lots of random symlinks to be
	created. We now grep for lines starting with a '/'

	* tests/conform/test-mesh-contiguous.c
	* tests/conform/test-mesh-mutability.c:
	Use cogl_set_source_color instead of directly calling glColor4ub

2008-11-13  Neil Roberts  <neil@linux.intel.com>

	* clutter/clutter-actor.c (clutter_actor_get_paint_visibility):
	Fix logic so that it won't return TRUE for a hidden stage.

2008-11-13  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/clutter-behaviour-ellipse.c:
	(clutter_behaviour_ellipse_applied): Do not reset the depth
	of the actors to which the Ellipse behaviour has been applied
	to, unless the behaviour is going to update it because it has
	a tilt on the X or Y axis.

2008-11-13  Neil Roberts  <neil@linux.intel.com>

	* clutter/clutter-actor.c (clutter_actor_get_reactive)
	(clutter_actor_get_paint_visibility): Be sure to return exactly
	TRUE or FALSE instead of zero or some non-zero value in these
	functions that return a gboolean. Thanks to Kai Wei for spotting.

2008-11-12  Emmanuele Bassi  <ebassi@linux.intel.com>
