@@ -1,3 +1,13 @@
+2008-11-14  Emmanuele Bassi  <ebassi@linux.intel.com>
+
+	Bug 1265 - ClutterScore doesn't emit 'started' signal (Bastian
+	Winkler)
+
+	* clutter/clutter-score.c: Emit the ::started signal.
+
+	* tests/interactive/test-score.c: Check the emission of the
+	Score signals.
+
 2008-11-13  Neil Roberts  <neil@linux.intel.com>
 
 	* clutter/cogl/gles/cogl-gles2-wrapper.h:
